adiciona colunas uf e cidade

--- a/data/datasus_reduction.ipynb
+++ b/data/datasus_reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,34 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('tbEstabelecimento202106.csv', sep=';', low_memory=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Carregando tabela do datasus\n",
+    "df = pd.read_csv('tbEstabelecimento202106.csv', sep=';', low_memory=False)\n",
+    "\n",
+    "\n",
     "# Filtrando seguintes estabelecimentos:\n",
     "# 1: Unidade Básica de Saúde; \n",
     "# 25: Centro de Imunização\n",
-    "df = df[df['CO_TIPO_ESTABELECIMENTO'].isin([1, 25])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = df[df['CO_TIPO_ESTABELECIMENTO'].isin([1, 25])]\n",
+    "\n",
+    "\n",
     "# Filtrando e renomeando seguintes colunas:\n",
     "columns = [\n",
     "  'NO_FANTASIA', \n",
+    "  'CO_MUNICIPIO_GESTOR',\n",
     "  'NO_LOGRADOURO', \n",
     "  'NU_ENDERECO',\n",
     "  'NO_COMPLEMENTO',\n",
@@ -58,6 +48,7 @@
     "\n",
     "alias = [\n",
     "  'nome',\n",
+    "  'cidade',\n",
     "  'logradouro',\n",
     "  'numero',\n",
     "  'complemento',\n",
@@ -69,26 +60,34 @@
     "]\n",
     "\n",
     "df = df[columns]\n",
-    "\n",
     "mapper = {c: a for c, a in zip(columns, alias)}\n",
+    "df = df.rename(columns=mapper)\n",
     "\n",
-    "df = df.rename(columns=mapper)\n"
+    "\n",
+    "# Sanitização de dados: removendo registros com \n",
+    "# valores inválidos de latitude ou longitude\n",
+    "df = df[~(df.latitude.isna() | df.longitude.isna())]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sanitização de dados: removendo registros com \n",
-    "# valores inválidos de latitude ou longitude\n",
-    "df = df[~(df.latitude.isna() | df.longitude.isna())]"
+    "# Adição do nome da cidade e unidade federativa\n",
+    "df_cidade = pd.read_csv('tbMunicipio202106.csv', sep=';')\n",
+    "\n",
+    "get_nome_cidade = lambda x: df_cidade.loc[df_cidade.CO_MUNICIPIO == x, 'NO_MUNICIPIO'].item()\n",
+    "get_uf = lambda x: df_cidade.loc[df_cidade.CO_MUNICIPIO == x, 'CO_SIGLA_ESTADO'].item()\n",
+    "\n",
+    "df['uf'] = [get_uf(cod_cidade) for cod_cidade in df['cidade']]\n",
+    "df['cidade'] = [get_nome_cidade(cod_cidade) for cod_cidade in df['cidade']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
