remoção de colunas não presentes no banco de dados

--- a/data/datasus_reduction.ipynb
+++ b/data/datasus_reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,11 @@
     "  'NO_FANTASIA', \n",
     "  'CO_MUNICIPIO_GESTOR',\n",
     "  'NO_LOGRADOURO', \n",
-    "  'NU_ENDERECO',\n",
-    "  'NO_COMPLEMENTO',\n",
+    "  # 'NU_ENDERECO',\n",
+    "  # 'NO_COMPLEMENTO',\n",
     "  'NO_BAIRRO',\n",
     "  'CO_CEP',\n",
-    "  'NU_TELEFONE',\n",
+    "  # 'NU_TELEFONE',\n",
     "  'NU_LATITUDE',\n",
     "  'NU_LONGITUDE'\n",
     "]\n",
@@ -49,12 +49,12 @@
     "alias = [\n",
     "  'nome',\n",
     "  'cidade',\n",
-    "  'logradouro',\n",
-    "  'numero',\n",
-    "  'complemento',\n",
+    "  'endereco',\n",
+    "  # 'numero',\n",
+    "  # 'complemento',\n",
     "  'bairro',\n",
     "  'cep',\n",
-    "  'telefone',\n",
+    "  # 'telefone',\n",
     "  'latitude',\n",
     "  'longitude'\n",
     "]\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
